# ulmd

./: CMakeLists.txt  DEPLOYMENT_GUIDE.md  DESIGN.md  LOW_LEVEL_DESIGN.md  PRODUCTION_READY.md  README.md  SECURITY_FIXES_COMPLETE.md  build.sh  deploy.sh  run_tests.sh  start_services_macos.sh  stop_services_macos.sh  validate_production.sh
.github/workflows/: ci.yml
apps/: ingress.cpp  parser.cpp  ringctl.cpp  tsc_cal.cpp  ulmdsim.cpp  worker_risk.cpp
config/: ulmd.conf
include/ulmd/: config.hpp  health.hpp  io.hpp  message_pool.hpp  metrics.hpp  parser.hpp  ring.hpp  shutdown.hpp  telemetry.hpp  worker_risk_shard.hpp
monitoring/: dashboard.py  docker-compose.yml
monitoring/exporter/: Dockerfile  exporter.py
monitoring/grafana/dashboards/: ulmd.json
monitoring/grafana/provisioning/dashboards/: ulmd.yml
monitoring/prometheus/: prometheus.yml
scripts/: backup.sh  benchmark.sh  clean_build.sh  error_analysis.sh  health_monitor.sh  metrics_analysis.sh  monitor.sh  validate_build.sh
src/: config.cpp  health.cpp  io.cpp  message_pool.cpp  metrics.cpp  ring.cpp  shutdown.cpp  telemetry.cpp  worker_risk_shard.cpp
